--- a/app/views/layouts/devise.html.erb
+++ b/app/views/layouts/devise.html.erb
@@ -14,7 +14,9 @@
       <div class="row">
         <div class="col-12 px-0 ">
           <%= render partial: 'navbar' %>
-          <%= yield %>
+          <div class="devise_bg 100vh">
+            <%= yield %>
+          </div>
         </div>
       </div>
     </div>
