--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -14,6 +14,18 @@ a, a:visited{
 .grey {
   color: #959aa8;
 }
+.font-14{
+  font-size: 14px;
+}
+.font-semibold{
+  font-weight: 500;
+}
+.form-control:focus{
+  border-color: #5423cf;
+  outline: 0;
+  box-shadow: 0 0 0 2px rgba(50, 1, 195, 0.2);
+  border-right-width: 1px !important;
+}
 
 
 .navbar-white{
@@ -110,4 +122,33 @@ a, a:visited{
   padding: 10px;
   font-size: 12px;
   font-weight: 300;
+}
+.modal-dialog{
+  width: 100vw;
+  max-width: 100vw;
+  margin: 0px !important; 
+}
+.modal-content{
+  height: 100vh;
+}
+
+.highlight_tag {
+  margin: 15px;
+  padding: 10px;
+  font-size: 12px;
+  font-weight: 500;
+  height: 41px;
+  border: 0px;
+  width: auto;
+  color: #0a2543;
+  background-color: rgba(10, 123, 255, 0.05);
+}
+.required:before{
+  content: '*';
+    line-height: 1;
+    font-size: 14px;
+    color: #f5222d;
+}
+.required:after{
+  content: ' ';
 }
