--- a/app/views/application/_certifications.html.erb
+++ b/app/views/application/_certifications.html.erb
@@ -3,40 +3,52 @@
 		<img src="<%= asset_path 'work-icon.svg' %>" class="img-fluid">
 		<p class="mb-0">Certifications</p>
 		<% if current_user.id == @user.id %>
-			<span class="ml-auto">+ Add more experience</span>
+			<span class="ml-auto" onclick="ModalService.toggleModal('certification')">+ Add more experience</span>
 		<% end %>
 	</div>
 
 	<div class="resume_content px-0 d-flex">
 		<div class="horizontal_divider">
-			
 		</div>
-		<div class="experience_container container">
-			<div class="bullet">
+		<div class="container-fluid">
+			<div class="row">
+				<% if @certifications.count > 0 %>
+					<% @certifications.each do |certification| %>
+						<div class="col-12">
+							<div class="certification_container" data-id="<%= certification.id %>">
+								<div class="bullet">
+								</div>
+								<div class="d-flex">
+									<p class="color-primary experience_header mb-0" ><%= certification.name %></p>
+									<span class="ml-auto d-flex">
+										<img src="<%= asset_path 'calendar-icon.svg' %>" class="img-fluid">
+										<p class="mb-0 align-self-center px-3" data-date="<%= certification.start_date %>">
+											<%= certification.start_date.strftime("%b %Y") %> - <%= certification.end_date.strftime("%b %Y") %> 
+										</p>
+										<% if current_user.id == @user.id %>
+											<img data-id="<%= certification.id %>" onclick="ModalService.toggleModal('certification', <%= certification.id %>)" src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" >
 
-			</div>
-			<div class="d-flex">
-				<p class="color-primary experience_header mb-0">vsd</p>
-				<span class="ml-auto d-flex">
-					<img src="<%= asset_path 'calendar-icon.svg' %>" class="img-fluid">
-					<p class="mb-0 align-self-center px-3">Oct 2019 - Oct 2019</p>
-					<% if current_user.id == @user.id %>
-						<img src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" >
+										<% end %>
+									</span>
+								</div>
+								<div class="d-flex py-3">
+									<img src="<%= asset_path 'institute-icon.svg' %>" class="img-fluid">
+									<p class="mb-0 px-2 "><%= certification.institute_name %></p>
+								</div>
+								<div>
+									<p class="grey"><%= certification.description %></p>
+								</div>
+							</div>
+						</div>
 					<% end %>
-				</span>
+				<% end %>
 			</div>
-			<div class="d-flex py-3">
-				<img src="<%= asset_path 'institute-icon.svg' %>" class="img-fluid">
-				<p class="mb-0 px-2 ">sdvsdvsdv</p>
-				<img src="<%= asset_path 'location-icon.svg' %>" class="img-fluid" >
-				<p class="mb-0 px-2">dscsdcsdcasd</p>
-			</div>
-			<div>
-				<p class="grey">dscsdcsdcasd</p>
-			</div>
-
-			<%= render partial: 'projects' %>
 		</div>
 	</div>
-	
+</div>
+
+<div class="modal" id="certification_modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    
+  </div>
 </div>
