--- a/app/views/application/_profile_info.html.erb
+++ b/app/views/application/_profile_info.html.erb
@@ -3,11 +3,36 @@
 		<img src="<%= asset_path 'profile-icon.svg' %>" class="img-fluid">
 		<p class="mb-0">Profile Overview</p>
 		<% if current_user.id == @user.id %>
-			<img src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" >
+			<img src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" onclick="ModalService.profileInfoModal()" >
 		<% end %>
 	</div>
 
 	<div class="resume_content">
-		<p class="grey">This is a sample profile. Entering dummy text here only for demonstration. Skills - Java, React, AWS.n,mm lk;l'./1234</p>
+		<p class="grey profile_info_content">This is a sample profile. Entering dummy text here only for demonstration. Skills - Java, React, AWS.n,mm lk;l'./1234</p>
 	</div>
+</div>
+
+
+
+
+<div class="modal" id="profile_info_modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Edit Profile Overview</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+      	<div class="form-group">
+      		<label class="required"> Some Words About You (Max 500 Characters)</label>
+      		<textarea class="form-control" id="profile_info_input"></textarea>
+      	</div>
+      	<div class="text-right">
+      		<button type="button" onclick="ModalService.submitProfileInfo()" class="btn btn-primary">Save changes</button>
+      	</div>
+      </div>
+    </div>
+  </div>
 </div>
