--- a/app/views/application/_education.html.erb
+++ b/app/views/application/_education.html.erb
@@ -2,7 +2,7 @@
 	<div class="resume_header d-flex align-middle">
 		<img src="<%= asset_path 'work-icon.svg' %>" class="img-fluid">
 		<p class="mb-0">Educations</p>
-		<% if current_user.id == @user.id %>
+		<% if current_user == @user %>
 			<span class="ml-auto" onclick="ModalService.toggleModal('education')">+ Add more experience</span>
 		<% end %>
 	</div>
@@ -25,7 +25,7 @@
 										<p class="mb-0 align-self-center px-3" data-date="<%= education.start_date %>">
 											<%= education.start_date.strftime("%b %Y") %> - <%= education.end_date.strftime("%b %Y") %> 
 										</p>
-										<% if current_user.id == @user.id %>
+										<% if current_user == @user %>
 											<img data-id="<%= education.id %>" onclick="ModalService.toggleModal('education', <%= education.id %>)" src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" >
 
 										<% end %>
