--- a/app/views/application/_experience_info.html.erb
+++ b/app/views/application/_experience_info.html.erb
@@ -2,7 +2,7 @@
 	<div class="resume_header d-flex align-middle">
 		<img src="<%= asset_path 'work-icon.svg' %>" class="img-fluid">
 		<p class="mb-0">Experience and Projects</p>
-		<% if current_user.id == @user.id %>
+		<% if current_user == @user %>
 			<span class="ml-auto">+ Add more experience</span>
 		<% end %>
 	</div>
@@ -20,7 +20,7 @@
 				<span class="ml-auto d-flex">
 					<img src="<%= asset_path 'calendar-icon.svg' %>" class="img-fluid">
 					<p class="mb-0 align-self-center px-3">Oct 2019 - Oct 2019</p>
-					<% if current_user.id == @user.id %>
+					<% if current_user == @user %>
 						<img src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" >
 					<% end %>
 				</span>
