--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -6,7 +6,7 @@
 		</div>
 		<div class="col-12 col-md-9">
 			<%= render partial: 'profile_info' %>
-			<%= render partial: 'experience_info' %>
+			<%= render partial: 'experience' %>
 			<%= render partial: 'education' %>
 			<%= render partial: 'certifications' %>
 			<%= render partial: 'awards' %>
