--- a/app/views/application/_highlights.html.erb
+++ b/app/views/application/_highlights.html.erb
@@ -3,18 +3,21 @@
 		<img src="<%= asset_path 'profile-icon.svg' %>" class="img-fluid">
 		<p class="mb-0">Highlights</p>
 		<% if current_user  == @user %>
-			<img src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" onclick="$('#highlights_input').modal()">
+			<img src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" onclick="$('#highlights_modal').modal()">
 		<% end %>
 	</div>
 
 	<div class="resume_content">
-		<a href="#" class="badge badge-grey">React-Ninja</a>
+    <% @highlights.each do |highlight| %>
+  		<a href="#" class="badge badge-grey"><%= highlight.name %></a>
+
+    <% end %>
 	</div>
 </div>
 
 
 
-<div class="modal" id="highlights_input" tabindex="-1" role="dialog">
+<div class="modal" id="highlights_modal" tabindex="-1" role="dialog">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -25,14 +28,17 @@
       </div>
       <div class="modal-body">
         <p class="font-14 font-semibold">Please add the top highlights of your profile. For eg. React Ninja, Amazon, Software Architect, etc.(Add highlights by pressing Enter)</p>
+
         <input type="text" class="form-control highlights_input">
 
         <div class="highlights_container py-3">
 
+             
         </div>
+        
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" onclick="ModalService.updateHighLights()">Save changes</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
       </div>
     </div>
@@ -41,6 +47,12 @@
 
 <script>
 	$(document).ready(function(){
-		TagsInput.startTags('.highlights_input', '.highlights_container')
+		// TagsInput.startTags('.highlights_input', '.highlights_container')
+    $(".highlights_input").tagsManager({
+      prefilled: <%= raw @highlights.pluck(:name) %>,
+      tagsContainer: '.highlights_container',
+      tagClass: 'highlight_tag'
+    });
+
 	})
 </script>
