--- a/app/views/application/_award_modal.html.erb
+++ b/app/views/application/_award_modal.html.erb
@@ -29,7 +29,7 @@
 	      			<div class="col-md-4 col-6">
 	      				<div class="form-group">
 	      					<label class="required">Date of Award/Event/Publication</label>
-	      					<input type="text" name="award_date" class="form-control" required="true" value="<%= @obj.award_date || '' %>">
+	      					<input type="text" name="award_date" class="form-control datepicker" required="true" value="<%= @obj.award_date || '' %>">
 	      				</div>
 
 	      			</div>
