--- a/app/views/application/_education_modal.html.erb
+++ b/app/views/application/_education_modal.html.erb
@@ -20,14 +20,14 @@
     			<div class="col-md-4 col-6">
     				<div class="form-group">
     					<label class="required">Start Date</label>
-    					<input type="text" name="start_date" class="form-control" required="true" value="<%= @obj.start_date || '' %>">
+    					<input type="text" name="start_date" class="form-control datepicker" required="true" value="<%= @obj.start_date || '' %>">
     				</div>
     			</div>
 
     			<div class="col-md-4 col-6">
     				<div class="form-group">
     					<label class="required">End Date</label>
-    					<input type="text" name="end_date" class="form-control" required="true" value="<%= @obj.end_date || '' %>">
+    					<input type="text" name="end_date" class="form-control datepicker" required="true" value="<%= @obj.end_date || '' %>">
     				</div>
 
     			</div>
