--- a/app/views/application/_awards.html.erb
+++ b/app/views/application/_awards.html.erb
@@ -21,7 +21,7 @@
 								<p class="color-primary experience_header mb-0" ><%= award.award_name %></p>
 								<span class="ml-auto d-flex">
 									<img src="<%= asset_path 'calendar-icon.svg' %>" class="img-fluid">
-									<p class="mb-0 align-self-center px-3" data-date="<%= award.award_date %>"><%= award.award_date.strftime("%^b %Y") %></p>
+									<p class="mb-0 align-self-center px-3" data-date="<%= award.award_date %>"><%= award.award_date.strftime("%^b %Y") if award.award_date %></p>
 									<% if current_user == @user %>
 										<img data-id="<%= award.id %>" onclick="ModalService.toggleModal('award', <%= award.id %>)" src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" >
 
