--- a/app/views/application/_education.html.erb
+++ b/app/views/application/_education.html.erb
@@ -23,7 +23,7 @@
 									<span class="ml-auto d-flex">
 										<img src="<%= asset_path 'calendar-icon.svg' %>" class="img-fluid">
 										<p class="mb-0 align-self-center px-3" data-date="<%= education.start_date %>">
-											<%= education.start_date.strftime("%b %Y") %> - <%= education.end_date.strftime("%b %Y") %> 
+											<%= education.start_date.strftime("%b %Y") if education.start_date %> - <%= education.end_date.strftime("%b %Y") if education.end_date %> 
 										</p>
 										<% if current_user == @user %>
 											<img data-id="<%= education.id %>" onclick="ModalService.toggleModal('education', <%= education.id %>)" src="<%= asset_path 'edit-icon.svg' %>" class="img-fluid ml-auto" >
